<resources>
    <string name="app_name">HelloToast</string>
    <string name="button_top">TOAST</string>
    <string name="button_bottom">COUNT</string>
    <string name="count_initial_value">0</string>
    <string name="toast_message">Hello Toast!</string>
    <string name="reset_count">Reset</string>
    <string name="Double_count">double</string>
    <string name="Toggle">toggle</string>
</resources>