<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/TOAST"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:background="@color/colorAccent"
        android:onClick="showToast"
        android:text="@string/button_top"
        app:layout_constraintEnd_toStartOf="@+id/Toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/count"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:background="#03A9F4"
        android:onClick="countUp"
        android:text="@string/button_bottom"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/show_count" />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/count_initial_value"
        android:textAlignment="center"
        android:textColor="#fff8b7"
        android:textSize="160sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TOAST"
        app:layout_constraintVertical_bias="0.501" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Double_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_count"
        android:onClick="Double_count"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/count"
        app:layout_constraintTop_toBottomOf="@+id/show_count"
        android:onClick="Reset_count" />

    <Button
        android:id="@+id/Toggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Toggle"
        app:layout_constraintBottom_toTopOf="@+id/show_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TOAST"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="Toggle_image"/>

</androidx.constraintlayout.widget.ConstraintLayout>